tests/should_fail/terminates/default_function_non_open.stderr
error: Mutually recursive functions: when calling `<impl inner::Foo for i32>::g`...
  --> default_function_non_open.rs:16:5
   |
16 |     fn g() {
   |     ^^^^^^
   |
note: then `<impl inner::Foo for i32>::g` might call `<impl inner::Foo for i32>::g` via the call to `inner::Foo::f`.
  --> default_function_non_open.rs:17:9
   |
17 |         Self::f(); // this assumes f could call g
   |         ^^^^^^^^^

error: aborting due to 1 previous error

